<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"    
    tools:context="br.com.app5.UserAddActivity" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="22sp"
        android:text="@string/register"/>
    
    <EditText 
	        android:id="@+id/useradd_edit_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:hint="@string/name"
	        android:inputType="text"/>
    
    <EditText 
	        android:id="@+id/useradd_edit_age"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:hint="@string/age"
	        android:inputType="number"/>
    
    <EditText 
	        android:id="@+id/useradd_edit_password"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:password="true"
	        android:hint="@string/password"/>
    
    <EditText 
	        android:id="@+id/useradd_edit_repassword"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:password="true"
	        android:hint="@string/repassword"/>
    
    
</LinearLayout>