<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.app5.ConfigActivity">

    <CheckBox
        android:id="@+id/checkbox_fullscreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckboxClicked"
        android:text="@string/fullscreen" />

    <Button
        android:id="@+id/config_btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
    
    <Button
        android:id="@+id/config_btn_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data" />
	
</LinearLayout>