<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.app5.MainActivity" >

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:orientation="vertical">
	    
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/name"/>
    
	    <EditText 
	        android:id="@+id/main_edit_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"/>
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/age"/>
	    
	    <EditText 
	        android:id="@+id/main_edit_age"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:inputType="number"/>
	    
	   	<TextView 
	   	    android:id="@+id/main_out_text"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:text="" />
	   	
	   	<ListView
              android:id="@+id/list"
              android:layout_height="wrap_content"
              android:layout_width="match_parent">
         </ListView> 
	   	
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
	    	android:id="@+id/main_btn_confirm"
	    	android:layout_width="0dp"	    	
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:text="@string/confirm"/>
	
		<Button 
	    	android:id="@+id/main_btn_register"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:text="@string/newuser"/>
		
		<Button 
	    	android:id="@+id/main_btn_refresh"
	    	android:layout_width="0dp"
	    	android:layout_height="wrap_content"
	    	android:layout_weight="1"
	    	android:text="@string/refresh"/>
		
    </LinearLayout>
	
			   
	
</LinearLayout>